[package]
name = "markov_simulations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "markov_simulations"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.15.6"
pyo3 = "0.19.0"
rand = "0.8.5"
rayon = "1.8.0"

